Implemented new/updated requirements.

--- a/views/post-previews/_post_preview_horizontal_search.html.twig
+++ b/views/post-previews/_post_preview_horizontal_search.html.twig
@@ -6,10 +6,11 @@
                 {{- post.title -}}
                 {{- post.meta('_alternative_names')|default ? ' <small>(' ~ post.meta('_alternative_names') ~ ')</small>'  : '' -}}
             </h3>
-            {% if post.parent %}
+            {% if post.parent or post.type.labels.singular_name|default(post.type.label) %}
                 <a href="{{ post.parent.link }}" class="text-muted text-decoration-none">
                     <h4>
-                        <small>{{ post.parent.title }}</small>
+                        <small class="d-block">{{ post.parent.title }}</small>
+                        <small class="d-block">{{ post.type.labels.singular_name|default(post.type.label) }}</small>
                     </h4>
                 </a>
             {% endif %}
