--- a/views/post-previews/_post_preview_horizontal_search.html.twig
+++ b/views/post-previews/_post_preview_horizontal_search.html.twig
@@ -1,4 +1,4 @@
-<article class="row my-3 py-3 border-bottom-1 border-primary">
+<article class="row my-3 py-3 border-end border-1 border-light">
 
     <div class="col-12 col-md d-flex align-items-start flex-column py-1">
         <a href="{{ post.link }}" class="text-dark text-decoration-none">
@@ -9,8 +9,8 @@
             {% if post.parent or post.type.labels.singular_name|default(post.type.label) %}
                 <a href="{{ post.parent.link }}" class="text-muted text-decoration-none">
                     <h4>
-                        <small class="d-block">{{ post.parent.title }}</small>
                         <small class="d-block">{{ post.type.labels.singular_name|default(post.type.label) }}</small>
+                        <small class="d-block">{{ post.parent.title }}</small>
                     </h4>
                 </a>
             {% endif %}
