--- a/views/post-previews/_post_preview_horizontal_search.html.twig
+++ b/views/post-previews/_post_preview_horizontal_search.html.twig
@@ -1,4 +1,4 @@
-<article class="row my-3 py-4 border-bottom border-2 border-light">
+<article class="row my-3 py-4 pt-2 border-bottom border-2 border-light">
 
     <div class="col-12 col-md d-flex align-items-start flex-column py-1">
         <a href="{{ post.link }}" class="text-dark text-decoration-none">
