Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -27,16 +27,14 @@ a {
   }
 }
 
-h3 {
-
-}
-
 h4 {
   color: $primary;
+  margin: .5em 0;
 }
 
 h5 {
-
+  color: $dark;
+  margin: .5em 0;
 }
 
 .hover-bold {
