--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -29,11 +29,13 @@ a {
 
 h4 {
   color: $primary;
+  font-size: larger;
   margin: .5em 0;
 }
 
 h5 {
   color: $dark;
+  font-size: medium;
   margin: .5em 0;
 }
 
