Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -30,13 +30,13 @@ a {
 h4 {
   color: $primary;
   font-size: large;
-  margin: .5em 0;
+  margin: 1em 0;
 }
 
 h5 {
   color: $dark;
-  font-size: medium;
-  margin: .5em 0;
+  font-size: larger;
+  margin: 1em 0;
 }
 
 .hover-bold {
