Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -29,13 +29,13 @@ a {
 
 h4 {
   color: $primary;
-  font-size: large;
+  font-size: 1.5em;
   margin: 1em 0;
 }
 
 h5 {
   color: $dark;
-  font-size: larger;
+  font-size: 1.2em;
   margin: 1em 0;
 }
 
