--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -29,13 +29,13 @@ a {
 
 h4 {
   color: $primary;
-  font-size: 1.5em;
+  font-size: 1.3em !important;
   margin: 1em 0;
 }
 
 h5 {
-  color: $dark;
-  font-size: 1.2em;
+  color: $black;
+  font-size: 1.2em !important;
   margin: 1em 0;
 }
 
