--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -27,6 +27,12 @@ a {
   }
 }
 
+h3 {
+  margin: 0;
+  font-size: medium;
+  font-weight: normal;
+}
+
 h4 {
   color: $primary;
   font-size: 1.3em !important;
