Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -99,6 +99,10 @@ h5 {
 .signpost-card {
   background-color: rgba(200, 200, 255, .25) !important;
 
+  h3 {
+    font-size: 1.15em;
+  }
+
   .card-img {
     background-size: cover;
     background-repeat: no-repeat;
