--- a/views/single-customs/single-nomenclature.html.twig
+++ b/views/single-customs/single-nomenclature.html.twig
@@ -77,8 +77,7 @@
                                     <div class="my-1">
                                         {{ equation.content|apply_filters('the_content') }}
                                         <p class="my-5">
-                                            <a class="btn btn-primary"
-                                               data-bs-toggle="collapse"
+                                            <a data-bs-toggle="collapse"
                                                href="#solution{{ index }}"
                                                role="button"
                                                aria-expanded="false"
