Implemented new/updated requirements.

--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -2,7 +2,7 @@
 
 {% block article_content %}
 
-    <nav class="nav row my-3 p-0 rounded-tabs" id="nav-tab">
+    <nav class="nav row my-3 mb-5 p-0 rounded-tabs" id="nav-tab">
 
         <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary active"
                 id="nav-tab-0"
@@ -76,9 +76,9 @@
 
                 {% if equations|length > 0 %}
                     <div class="swiper-container">
-                        <div class="swiper-wrapper p-3">
+                        <div class="swiper-wrapper p-4">
                             {% for index, equation in equations %}
-                                <div class="swiper-slide p-3" data-level="{{ equation.meta('_level') }}">
+                                <div class="swiper-slide p-5" data-level="{{ equation.meta('_level') }}">
                                     <div class="my-1">
                                         {{ equation.content|apply_filters('the_content') }}
                                         <p class="my-5">
