Implemented new/updated requirements.

--- a/views/post-previews/_video_preview_horizontal.html.twig
+++ b/views/post-previews/_video_preview_horizontal.html.twig
@@ -1,7 +1,7 @@
 <article class="row mx-0 my-5 py-3 bg-dark bg-opacity-10">
     <div class="col-12 col-md-8 col-lg-7 d-flex align-items-start flex-column">
         <a href="{{ material.link }}" class="text-dark text-decoration-none">
-            <h3 class="fw-bold fs-4 my-0 text-muted">{{ material.title }}</h3>
+            <h3 class="fw-bold fs-4 my-0 mb-1 text-muted">{{ material.title }}</h3>
         </a>
         <div style="text-align: justify;">
             {{ material.post_excerpt }}
