Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -28,9 +28,9 @@ a {
 }
 
 h3 {
-  margin: 0;
-  font-size: medium;
-  font-weight: normal;
+  margin: .5em 0;
+  font-size: large;
+  font-weight: bold;
 }
 
 h4 {
