--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -33,6 +33,14 @@ h3 {
   font-weight: bold;
 }
 
+.rounded-tabs, .tabs {
+  h3 {
+    margin: 0;
+    font-size: medium;
+    font-weight: normal;
+  }
+}
+
 h4 {
   color: $primary;
   font-size: 1.3em !important;
