Implemented new/updated requirements.

--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -76,7 +76,7 @@
         {% endif %}
         {% if post.documents|length > 0 %}
             <div class="col-12 col-lg-6">
-                <h4>Pracovní listy</h4>
+                <h4>Podklady pro exkurze</h4>
                 <ul>
                     {% for document in post.documents %}
                         <li class="text-uppercase">
