Implemented new/updated requirements.

--- a/views/navigations/sub-tabs/sub-content-tabs.html.twig
+++ b/views/navigations/sub-tabs/sub-content-tabs.html.twig
@@ -24,6 +24,9 @@
                      id="nav-{{ index }}"
                      role="tabpanel"
                      aria-labelledby="nav-tab-{{ index }}">
+                    {% filter shortcodes|raw %}
+                        [reseni]FOOOOOO[/reseni]
+                    {% endfilter %}
                     {{ tab.tab_content|default(tab.content)|apply_filters('the_content') }}
                 </div>
                 {% set iter = iter + 1 %}
