--- a/views/navigations/sub-tabs/sub-content-tabs.html.twig
+++ b/views/navigations/sub-tabs/sub-content-tabs.html.twig
@@ -19,18 +19,18 @@
     <section class="row">
         <div class="tab-content col-12" id="nav-tabContent">
             {% set iter = 0 %}
-            {% filter shortcodes|raw %}
-                {% for index, tab in tabs %}
-                    <div class="tab-pane fade {{ iter < 1 ? ' show active' : '' }}"
-                         id="nav-{{ index }}"
-                         role="tabpanel"
-                         aria-labelledby="nav-tab-{{ index }}">
+            {% for index, tab in tabs %}
+                <div class="tab-pane fade {{ iter < 1 ? ' show active' : '' }}"
+                     id="nav-{{ index }}"
+                     role="tabpanel"
+                     aria-labelledby="nav-tab-{{ index }}">
+                    {% apply shortcodes|raw %}
                         [reseni]FOOOOOO[/reseni]
-                        {{ tab.tab_content|default(tab.content)|apply_filters('the_content') }}
-                    </div>
-                    {% set iter = iter + 1 %}
-                {% endfor %}
-            {% endfilter %}
+                    {% endapply %}
+                    {{ tab.tab_content|default(tab.content)|apply_filters('the_content') }}
+                </div>
+                {% set iter = iter + 1 %}
+            {% endfor %}
         </div>
     </section>
 {% endif %}
