Implemented new/updated requirements.

--- a/views/navigations/sub-tabs/sub-content-tabs.html.twig
+++ b/views/navigations/sub-tabs/sub-content-tabs.html.twig
@@ -24,10 +24,8 @@
                      id="nav-{{ index }}"
                      role="tabpanel"
                      aria-labelledby="nav-tab-{{ index }}">
-                    {% apply shortcodes|raw %}
-                        [reseni]FOOOOOO[/reseni]
-                    {% endapply %}
-                    {{ tab.tab_content|default(tab.content)|apply_filters('the_content') }}
+                    {{ wp.do_shortcode("[reseni]FOOOOOO[/reseni]")|raw }}
+                    {{ wp.do_shortcode(tab.tab_content|default(tab.content))|raw }}
                 </div>
                 {% set iter = iter + 1 %}
             {% endfor %}
