Implemented new/updated requirements.

--- a/views/navigations/sub-tabs/sub-content-tabs.html.twig
+++ b/views/navigations/sub-tabs/sub-content-tabs.html.twig
@@ -25,6 +25,7 @@
                      role="tabpanel"
                      aria-labelledby="nav-tab-{{ index }}">
                     {{ "[reseni]FOOOOOO[/reseni]"|shortcodes }}
+                    {{ "[wporg title="WordPress.org"]Having fun with WordPress.org shortcodes.[/wporg]"|shortcodes }}
                     {{ "[video]"|shortcodes }}
                     {{ tab.tab_content|default(tab.content)|shortcodes }}
                 </div>
