--- a/views/post-previews/_post_preview_horizontal_search.html.twig
+++ b/views/post-previews/_post_preview_horizontal_search.html.twig
@@ -1,22 +1,22 @@
 <article class="row my-3 py-4 pt-2 border-bottom border-2 border-light">
 
     <div class="col-12 col-md d-flex align-items-start flex-column py-1">
-        <a href="{{ post.link }}" class="text-dark text-decoration-none">
-            <h3>
-                {%- if post.parent -%}
-                    <a href="{{ post.parent.link }}" class="text-muted text-decoration-none small">
-                        {{ post.parent.title }} >
-                    </a>
-                {%- endif -%}
+        <h3 class="my-1">
+            {%- if post.parent -%}
+                <a href="{{ post.parent.link }}" class="text-muted text-decoration-none small">
+                    <small>{{ post.parent.title }} ></small>
+                </a>
+            {%- endif -%}
+            <a href="{{ post.link }}" class="text-dark text-decoration-none">
                 {{- post.title -}}
                 {{- post.meta('_alternative_names')|default ? ' <small>(' ~ post.meta('_alternative_names') ~ ')</small>'  : '' -}}
-            </h3>
-            {% if post.parent or post.type.labels.singular_name|default(post.type.label) %}
-                <h4 class="text-muted text-decoration-none">
-                    <small class="d-block">{{ post.type.labels.singular_name|default(post.type.label) }}</small>
-                </h4>
-            {% endif %}
-        </a>
+            </a>
+        </h3>
+        {% if post.parent or post.type.labels.singular_name|default(post.type.label) %}
+            <h4 class="text-muted text-decoration-none my-1">
+                <small class="d-block">{{ post.type.labels.singular_name|default(post.type.label) }}</small>
+            </h4>
+        {% endif %}
         <div style="text-align: justify;">
             {{ post.post_excerpt }}
         </div>
