--- a/views/navigations/signpost/signpost-item.html.twig
+++ b/views/navigations/signpost/signpost-item.html.twig
@@ -8,7 +8,7 @@
         {% endif %}
         {% set classes = image_src|default ? 'justify-content-center': 'justify-content-center align-items-center' %}
         <div class="card-body d-flex flex-column align-middle {{ classes }}" style="min-height: 6em;">
-            <h3 class="card-title {{ post.post_excerpt|default|length > 0 ? '' : 'text-center' }}">
+            <h3 class="card-title fw-normal {{ post.post_excerpt|default|length > 0 ? '' : 'text-center' }}">
                 <strong>{{ post.title }}</strong>
             </h3>
             <p class="small card-text {{ post.post_excerpt|default|length > 0 ? 'mt-auto' : '' }}" style="text-align: justify;">
