--- a/views/post-previews/_photo_preview_vertical.twig
+++ b/views/post-previews/_photo_preview_vertical.twig
@@ -8,7 +8,7 @@
             </div>
         {% endif %}
         <div class="card-body d-flex flex-column">
-            <h5 class="card-title text-center fw-bold fs-4 my-0 text-muted">
+            <h5 class="card-title text-center fw-normal fs-5 my-0 text-muted">
                 {{ post.title }}
             </h5>
         </div>
