--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -66,7 +66,8 @@
                 <ul>
                     {% for activity in post.activities %}
                         <li class="text-uppercase">
-                            <strong>{{ activity.activity_name }}</strong>
+                            <strong>{{ activity.activity_name }}</strong><br>
+                            {{ activity.activity_description }}
                         </li>
                     {% endfor %}
                 </ul>
@@ -77,7 +78,7 @@
                 <h4>Podklady pro exkurze</h4>
                 <ul>
                     {% for document in post.documents %}
-                        <li class="text-uppercase">
+                        <li>
                             <strong>
                                 <a href="{{ get_attachment(document.document_file).src }}" target="_blank">
                                     {{ document.document_name }}
