--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -2,6 +2,13 @@
 
 {% block article_content %}
 
+    <div class="row">
+        <div class="col-12">
+            {{ post.meta('_page_description')|apply_filters('the_content') }}
+        </div>
+    </div>
+
+
     <nav class="nav row my-3 mb-4 p-0 rounded-tabs" id="nav-tab">
 
         <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary active"
