Implemented new/updated requirements.

--- a/views/post-previews/_post_preview_horizontal_search.html.twig
+++ b/views/post-previews/_post_preview_horizontal_search.html.twig
@@ -4,7 +4,7 @@
 
     <div class="col-12 col-md d-flex align-items-start flex-column py-1">
         <h3 class="my-1">
-            <a href="{{ post.link }}" class="text-dark text-decoration-none">
+            <a href="{{ link }}" class="text-dark text-decoration-none">
                 {%- if post.parent -%}
                     <small class="text-muted text-decoration-none small">
                         {{ post.parent.title }} >
