--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -26,7 +26,7 @@
             </button>
         {% endfor %}
     </nav>
-    <article class="row my-0 py-0 mb-3 g-5 justify-content-md-center tab-content" id="nav-tabContent">
+    <article class="row my-0 py-0 mb-3 justify-content-md-center tab-content" id="nav-tabContent">
         <section class="col-12 tab-pane fade show active" id="nav-0" role="tabpanel" aria-labelledby="nav-tab-0">
             <div class="ratio ratio-1x1">
                 <!--suppress HtmlDeprecatedAttribute -->
