Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -30,11 +30,22 @@
         <section class="col-12 tab-pane fade show active" id="nav-0" role="tabpanel" aria-labelledby="nav-tab-0">
             <div class="ratio ratio-1x1">
                 <!--suppress HtmlDeprecatedAttribute -->
-                <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
+                {#                <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d" #}
+                {#                        id="interactive-map" #}
+                {#                        allowfullscreen #}
+                {#                        style="border: 0 none; width: 100%; overflow: hidden;" #}
+                {#                        scrolling="no" #}
+                {#                        allow="geolocation"> #}
+                {#                    Interaktivní mapa chemických podniků se načítá... #}
+                {#                </iframe> #}
+                <iframe src="https://storymaps.arcgis.com/stories/ae68650a255642a995913cc68fc8042b?cover=false"
                         id="interactive-map"
-                        allowfullscreen
+                        width="100%"
+                        height="100%"
+                        frameborder="0"
                         style="border: 0 none; width: 100%; overflow: hidden;"
                         scrolling="no"
+                        allowfullscreen
                         allow="geolocation">
                     Interaktivní mapa chemických podniků se načítá...
                 </iframe>
