--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -2,6 +2,13 @@
 
 {% block article_content %}
     <section class="row">
+        <div class="col text-left">
+            <p>
+                <a href="/kategorie-studijnich-materialu/interaktivni-mapa-chemickeho-prumyslu-cr/">
+                    🠐 Zpět na mapu
+                </a>
+            </p>
+        </div>
         <div class="col pb-0 text-justify">
             <p>{{ post.post_excerpt|default }}</p>
         </div>
