--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -27,7 +27,7 @@
         {% endfor %}
     </nav>
     <article class="row my-0 py-0 mb-3 justify-content-md-center tab-content" id="nav-tabContent">
-        <section class="col-12 tab-pane fade show active" id="nav-0" role="tabpanel" aria-labelledby="nav-tab-0">
+        <section class="col-12 mt-3 tab-pane fade show active" id="nav-0" role="tabpanel" aria-labelledby="nav-tab-0">
             <div class="ratio ratio-1x1">
                 <!--suppress HtmlDeprecatedAttribute -->
                 {#                <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d" #}
