Implemented new/updated requirements.

--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -5,10 +5,13 @@
         <div class="col text-left">
             <p>
                 <a href="/kategorie-studijnich-materialu/interaktivni-mapa-chemickeho-prumyslu-cr/">
-                    🠐 Zpět na mapu
+                    🠔 Zpět na mapu
                 </a>
             </p>
         </div>
+    </section>
+
+    <section class="row">
         <div class="col pb-0 text-justify">
             <p>{{ post.post_excerpt|default }}</p>
         </div>
