--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -5,7 +5,7 @@
         <div class="col text-left">
             <p>
                 <a href="/kategorie-studijnich-materialu/interaktivni-mapa-chemickeho-prumyslu-cr/">
-                    🠔 Zpět na mapu
+                    &xlarr; Zpět na mapu
                 </a>
             </p>
         </div>
