Implemented new/updated requirements.

--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -1,7 +1,7 @@
 {% extends "post-types/page.html.twig" %}
 
 {% block article_content %}
-    <section class="row">
+    <section class="row" style="margin-top: -1em;">
         <div class="col text-left">
             <p>
                 <a href="/kategorie-studijnich-materialu/interaktivni-mapa-chemickeho-prumyslu-cr/">
