--- a/views/single-customs/single-nomenclature.html.twig
+++ b/views/single-customs/single-nomenclature.html.twig
@@ -82,7 +82,8 @@
                                                role="button"
                                                aria-expanded="false"
                                                aria-controls="solution{{ index }}">
-                                                Zobrazit řešení
+                                                <span class="collapsed-show">Zobrazit řešení</span>
+                                                <span class="collapsed-hide">Skrýt řešení</span>
                                             </a>
                                         </p>
                                     </div>
