Implemented new/updated requirements.

--- a/views/single-customs/single-nomenclature.html.twig
+++ b/views/single-customs/single-nomenclature.html.twig
@@ -80,7 +80,7 @@
                                             <a data-bs-toggle="collapse"
                                                href="#solution{{ index }}"
                                                role="button"
-                                               class="collapse-href"
+                                               class="collapse-href collapsed"
                                                aria-expanded="false"
                                                aria-controls="solution{{ index }}">
                                                 <span class="collapsed-show">Zobrazit řešení</span>
