--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -92,9 +92,11 @@
                                             <a data-bs-toggle="collapse"
                                                href="#solution{{ index }}"
                                                role="button"
+                                               class="collapse-href collapsed"
                                                aria-expanded="false"
                                                aria-controls="solution{{ index }}">
-                                                Zobrazit řešení
+                                                <span class="collapsed-show">Zobrazit řešení</span>
+                                                <span class="collapsed-hide">Skrýt řešení</span>
                                             </a>
                                         </p>
                                     </div>
